[NEW] Added Mockito and JUnit tests